--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <nav>
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Booty Builder</a>
+  <div class="nav-wrapper blue-grey darken-4">
+    <a href="#" class="brand-logo brand-name">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="sass.html">Home</a></li>
       <li><a href="badges.html">Search</a></li>
@@ -8,3 +8,14 @@
     </ul>
   </div>
 </nav>
+
+<section class="introduction-banner"> 
+  
+    <div class="button-links"> 
+      <%= link_to 'Register', new_user_path, class: "register-button" %> 
+      <%= link_to 'Sign In', login_path, class: "signin-button" %> 
+ 
+  </div> 
+
+
+</section>
