--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,12 +10,33 @@
 </nav>
 
 <section class="introduction-banner"> 
-  
-    <div class="button-links"> 
-      <%= link_to 'Register', new_user_path, class: "register-button" %> 
-      <%= link_to 'Sign In', login_path, class: "signin-button" %> 
- 
+  <div class="button-links"> 
+    <%= link_to 'Register', new_user_path, class: "register-button" %> 
+    <%= link_to 'Sign In', login_path, class: "signin-button" %> 
   </div> 
+</section>
+
+
+  <div class="row"> 
+    <div id="page-content"> 
+  <h3 class="content-text">Find all isolated glute exercises</h3>
+    <div class="col s4"> 
+      <img class="content-photo" src="/images/fit.jpg"> 
+
+    </div>
+
+    <div class="col s4"> 
+       <img class="content-photo" src="/images/color-glute.jpg">
+
+     
+    </div> 
+
+    <div class="col s4"> 
+       <img class="content-photo" src="/images/dumbell-girl.jpg">
+    </div>
+  </div> 
+
+
 
 
 </section>
