--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -13,12 +13,16 @@ button {
 
 .content-text {
   text-align: center; 
+  padding-top: 30px;
+  padding-right: 100px;
+  color: #FE1400;
 }
 
 .content-photo {
-  width: 400px; 
-  height: 380px;
-  padding-left: 10px;
+  width: 340px; 
+  height: 360px;
+  padding-top: 20px;
+
 }
 
 .button-links { 
@@ -44,7 +48,7 @@ button {
 }
 
 .register-button:hover {
-  background-color: #8f3985;
+  background-color: #FE1400;
   border-color: #cf3d0e;
   cursor: pointer;
 }
@@ -62,7 +66,7 @@ button {
 }
 
 .signin-button:hover { 
-  background-color: #8f3985;
+  background-color: #FE1400;
   border-color: #cf3d0e;
   cursor: pointer;
 }
@@ -78,5 +82,9 @@ button {
 }
 
 #page-content {
-  margin-left: 45px;
+  padding-left: 80px;
+  background-color:#FAFAFA;
+  width: 100%; 
+  height: 500px;
+
 }
