--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
+<!-- navbar -->
 <nav>
   <div class="nav-wrapper blue-grey darken-4">
     <a href="#" class="brand-logo brand-name">Booty Builder</a>
@@ -9,6 +10,7 @@
   </div>
 </nav>
 
+<!-- navigation link for users -->
 <section class="introduction-banner"> 
   <div class="button-links"> 
     <%= link_to 'Register', new_user_path, class: "register-button" %> 
@@ -16,27 +18,42 @@
   </div> 
 </section>
 
-
-  <div class="row"> 
-    <div id="page-content"> 
-  <h3 class="content-text">Find all isolated glute exercises</h3>
+<!-- content photos -->
+<div class="row"> 
+  <div id="page-content"> 
+  <h4 class="content-text">Find isolated glute exercises that gives results</h4>
     <div class="col s4"> 
       <img class="content-photo" src="/images/fit.jpg"> 
-
     </div>
 
     <div class="col s4"> 
        <img class="content-photo" src="/images/color-glute.jpg">
-
-     
     </div> 
 
     <div class="col s4"> 
        <img class="content-photo" src="/images/dumbell-girl.jpg">
     </div>
   </div> 
+</div>
 
-
-
-
-</section>
+<!-- footer content -->
+<footer class="page-footer black">
+  <div class="container center-align">
+    <div class="row">
+      <div class="col s12">
+        <h5 class="white-text">Booty Builder</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col s12">
+        <h5 class="white-text">Contact Us</h5>
+      
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container center-align">
+     Copyright 2015 © Booty Builder
+      <a class="grey-text text-lighten-4 right" href="#!"></a>
+    </div>
+  </div>
+</footer>
