--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,6 +4,46 @@
 
 
 .register-form {
-  width: 600px;
-  padding-left: 300px;
+  width: 1000px;
+  padding-left: 480px;
 }
+
+.log-form {
+  width: 400px;
+  margin: 100px auto;
+  padding:50px;
+  border: 1px solid rgba(0,0,0,0.1);
+  -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.2);
+  background:#fff;
+}
+
+.register-text {
+  text-align: center;
+  color: #00AA99;
+}
+
+.log-form > label{
+  display:block;
+  margin:10px 0 15px;
+  line-height:15px;
+  cursor:pointer;
+}
+
+.login-button { 
+  width: 300px;
+  height: 50px;
+  background-color: #D81E5B;
+  border-color: #33474F;
+  text-shadow: none;
+  border-style: none;
+  border-radius: 4px;
+  padding: 1rem 1.5rem;
+  color: white;
+  font-size: 1.125rem;
+}
+
+.login-button:hover{
+  background-color: #FE1400;
+}
+
+
