--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,24 +11,28 @@
 </nav>
 
 <!-- register form -->
-<section class="register-form"> 
-  <div class="col s12">
+<div class="register-form"> 
+  <div class="log-form z-depth-2">
+    <div class="col s12">
+      <h3 class="register-text">Register</h3>
   
-    <%= form_for @user do |f| %> 
+      <%= form_for @user do |f| %> 
 
-      <%= f.text_field :email, :placeholder => "email", class: "sign-input" %> 
+        <%= f.text_field :email, :placeholder => "email", class: "sign-input" %> 
 
-      <%= f.text_field :name, :placeholder => "name", class: "sign-input" %> 
+        <%= f.text_field :name, :placeholder => "name", class: "sign-input" %> 
 
-      <%= f.password_field :password, :placeholder => "password", class: "sign-input" %> 
+        <%= f.password_field :password, :placeholder => "password", class: "sign-input" %> 
 
-      <%= f.password_field :password_confirmation, :placeholder => "password confirmation", class: "sign-input" %> 
+        <%= f.password_field :password_confirmation, :placeholder => "password confirmation", class: "sign-input" %>
 
-    <% end %> 
+        <%= f.submit "login", class: "login-button" %> 
+
+      <% end %> 
   
+    </div>
   </div>
-
-</section> 
+</div> 
 
 <!-- footer content -->
 <footer class="page-footer black">
