created a link for users to go to the homepage

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,6 +8,10 @@
   position: relative;
 }
 
+.register-form input[type="password"] {
+  color: black;
+}
+
 .log-form {
   width: 400px;
   margin: 100px auto;
@@ -57,14 +61,8 @@
 /* user profile */
 @import url(http://fonts.googleapis.com/css?family=Quicksand:300,400|Lato:400,300|Coda|Open+Sans);
 
-/* 
-* Art by @jofpin 
-* 2014
-*/
-body {
-  background: #f8f5f0;
-  font-family: "Open sans", sans-serif;
-}
+
+
 a {
   text-decoration: none;
   color: #3498db;
