--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <div class="nav-wrapper blue-grey darken-3">
     <a href="#" class="brand-logo brand-name">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Home</a></li>
+      <li><%= link_to 'Home', user_path(current_user) %></li>
       <li><a href="badges.html">Search</a></li>
       <li><a href="collapsible.html">Signout</a></li>
     </ul>
