--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
 <!-- navbar -->
 <nav>
-  <div class="nav-wrapper blue-grey darken-3">
+  <div class="nav-wrapper blue-grey darken-2">
     <a href="#" class="brand-logo brand-name">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Home</a></li>
-      <li><a href="badges.html">Search</a></li>
-      <li><a href="collapsible.html">Signout</a></li>
+      <li><%= link_to 'Explore', photos_path %></li>
+      <li><%= link_to 'Search', users_path %></li>
+      <li><%= link_to 'Sign Out', logout_path, method: :delete %></li>
     </ul>
   </div>
 </nav>
@@ -15,21 +15,43 @@
    <div class="profile-user-page card">
       <div class="img-user-profile">
         <img class="profile-bgHome" src="http://37.media.tumblr.com/88cbce9265c55a70a753beb0d6ecc2cd/tumblr_n8gxzn78qH1st5lhmo1_1280.jpg" />
-        <img class="avatar" src="http://gravatar.com/avatar/288ce55a011c709f4e17aef7e3c86c64?s=200" alt="jofpin"/>
-           </div>
-          <button>Follow</button>
-          <div class="user-profile-data">
-            <h1>José Pino</h1>
-            <p>github.com/jofpin</p>
-          </div> 
-          <div class="description-profile">Front-end | Security Researcher | CSS Warrior | <a href="https://twitter.com/bullgit" title="bullgit"><strong>@bullgit</strong></a> | I love to create small things for the internet!</div>
-       <ul class="data-user">
-        <li><a><strong>3390</strong><span>Posts</span></a></li>
-        <li><a><strong>718</strong><span>Followers</span></a></li>
-        <li><a><strong>239</strong><span>Following</span></a></li>
-       </ul>
+        <!-- user profile photo -->
+        <%= image_tag @user.avatar.url(:thumb) %> 
       </div>
-    </div>
+      <div class="user-profile-data">
+        <h1 id="user-name"><%= @user.name %></h1>
+    </div> 
+  </div>
+</div>
+<!-- end of user content -->
+
+<!-- photo feed -->
+<div class="photo-content"> 
+  <h4 class="feed-text">Photo Feed</h4> 
+  <ul id="feed-box"> 
+    <% @user_photos.each do |photo| %> 
+      <li> 
+        <div class="photo-wrapper"> 
+          <div class="photo"> 
+            <%= link_to image_tag(photo.image.url(:medium)), photo_path(photo.id), class: "feed-links" %> 
+          </div> 
+          <div class="text_bottom"><%= photo.content %></div> 
+        </div> 
+      </li>
+    <% end %> 
+  </ul> 
+</div> <!-- end of photo feed -->
+
+
+<!-- personal navigation for users -->
+<nav id="navBottom"> 
+  <ul id="navTxtBottom"> 
+    <li class="nav-links"><%= link_to 'edit profile', edit_user_path %></li> 
+    <li class="nav-links"><%= link_to 'add photo', new_photo_path %></li> 
+    <li class="nav-links"><%= link_to 'delete account', user_path(current_user), method: :delete, data: { confirm: 'Are you sure?'} %></li> 
+  </ul> 
+</nav><!-- end of navigation-->
+
 
 
 
