--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,59 @@
-edit.html.erb
+<!-- navbar -->
+<nav>
+  <div class="nav-wrapper blue-grey darken-2">
+    <a href="#" class="brand-logo brand-name">Booty Builder</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><%= link_to 'Explore', photos_path %></li>
+      <li><%= link_to 'Search', users_path %></li>
+      <li><%= link_to 'Sign Out', logout_path, method: :delete %></li>
+    </ul>
+  </div>
+</nav> <!-- end of navabar -->
+
+<!-- edit form -->
+<div id="user-edit"> 
+  <%= form_for(@user, :html => { :class => "edit-form"} ) do |f| %> 
+    <!-- user edit input -->
+    <div class="row"> 
+      <div class="col s12"> 
+        <%= f.text_field :email, :placeholder => "email", class: "sign-input" %> 
+      </div> 
+      <div class="col s12"> 
+        <%= f.text_field :name, :placeholder => "name", class: "sign-input" %> 
+      </div> 
+      <div class="col s12"> 
+        <%= f.password_field :password, :placeholder => "password", class: "sign-input" %>
+      </div>
+      <div class="col s12"> 
+        <%= f.password_field :password, :placeholder => "password confirmation", class: "sign-input" %> 
+      </div> 
+      <div class="col s12"> 
+        <%= f.file_field :avatar, :placeholder => "profile photo", class: 'avatar-input' %> 
+      </div>
+      <%= f.submit "update", class: "edit-button" %> 
+    </div> 
+  <% end %> 
+</div> <!-- end of user edit form -->
+
+
+
+<!-- footer content -->
+<footer class="page-footer black">
+  <div class="container center-align">
+    <div class="row">
+      <div class="col s12">
+        <h5 class="white-text">Booty Builder</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col s12">
+        <h5 class="white-text">Contact Us</h5>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container center-align">
+     Copyright 2015 © Booty Builder
+      <a class="grey-text text-lighten-4 right" href="#!"></a>
+    </div>
+  </div>
+</footer>
