added ui to edit form

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,6 +12,7 @@
 
 <!-- edit form -->
 <div id="user-edit"> 
+  <h3>Edit Profile</h3>
   <%= form_for(@user, :html => { :class => "edit-form"} ) do |f| %> 
     <!-- user edit input -->
     <div class="row"> 
