--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -233,6 +233,7 @@ a {
   text-shadow: 0 1px 0 #FFF;
   max-width: 400px;
   margin-top: 30px;
+  position: relative; 
   margin-left: 500px;
   padding: 15px 40px 20px 40px;
   box-shadow: 0 0 3px #000;
@@ -265,6 +266,23 @@ a {
   width: 280px;
   height: 50px;
  
+}
+
+.edit-banner {
+  background: url("/images/jen.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: absolute; 
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%; 
+  display: block;
+  z-index:0;
+  margin-top: 60px;
+  background-color: rgba(0, 0, 0,0.6);
 }
 
 
