--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,2 +1,48 @@
-<h1>Photos#new</h1>
-<p>Find me in app/views/photos/new.html.erb</p>
+<!-- navbar -->
+<nav>
+  <div class="nav-wrapper blue-grey darken-2">
+    <a href="#" class="brand-logo brand-name">Booty Builder</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><%= link_to 'Home', user_path(current_user) %></li> 
+      <li><%= link_to 'Explore', photos_path %></li>
+      <li><%= link_to 'Search', users_path %></li>
+      <li><%= link_to 'Sign Out', logout_path, method: :delete %></li>
+    </ul>
+  </div>
+</nav> <!-- end of navabar -->
+
+<div class="photo-form container center-align">
+  <h3 class='photo-title'>Add Photo</h3> 
+  <div class="row">
+    <div class="col s6">
+      <%= form_for @photo, html: { multipart: true }, class: "photo-line center-align" do |f| %> 
+        <%= f.text_field :content, :placeholder => "caption" %> 
+        <%= f.file_field :image, class: "photo-image" %><br/>
+        <%= f.submit "Post", class: "photo-btn center-align" %> 
+      <% end %> 
+    </div>
+    <!-- end of photo form -->
+  </div>
+</div>
+
+<!-- footer content -->
+<footer class="page-footer black">
+  <div class="container center-align">
+    <div class="row">
+      <div class="col s12">
+        <h5 class="white-text">Booty Builder</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col s12">
+        <h5 class="white-text">Contact Us</h5>
+      
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container center-align">
+     Copyright 2015 © Booty Builder
+      <a class="grey-text text-lighten-4 right" href="#!"></a>
+    </div>
+  </div>
+</footer>
