--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,12 +3,15 @@
   <div class="nav-wrapper blue-grey darken-2">
     <a href="#" class="brand-logo brand-name">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><%= link_to 'Home', user_path(current_user) %></li> 
       <li><%= link_to 'Explore', photos_path %></li>
       <li><%= link_to 'Search', users_path %></li>
       <li><%= link_to 'Sign Out', logout_path, method: :delete %></li>
     </ul>
   </div>
 </nav> <!-- end of navabar -->
+
+<div class="edit-banner"></div>
 
 <!-- edit form -->
 <div id="user-edit"> 
