aligned photos in 4 coloumn row

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -286,42 +286,55 @@ a {
 }
 
 /* photo feed */
-.photo-feed {
+.content {
   margin: 0 auto;
   padding: 5px;
   clear: left;
 }
 
-.feed-links {
-  margin-left: 30px; 
-}
-
 .feed-box {
-  list-style: none; 
-  display: inline; 
-  position: relative; 
-  float: left; 
-  width: 200px; 
-  padding: 7px 0 25px 0; 
-  margin: 0; 
+  margin: 0;
   display: block;
 }
 
-.feed-box li {
-  list-style: none; 
-  display: inline; 
-  position: relative; 
-  float: left; 
+
+.feed-box {
+  list-style:none;
+  display: inline;
+  position: relative;
+  float: left;
+  width: 200px;
+  padding: 7px 0 25px 0; 
+}
+
+li {
+  list-style:none;
+  display: inline;
+  position: relative;
+  float: left;
 }
 
 .photo-wrapper {
-  position: relative; 
-  text-align: center; 
-  margin: 0 20px 10px; 
-}  
-
-.photo {
-  width: 300px; 
-  height: 300px; 
+  position: relative;
+  text-align: center;
+  margin: 0 20px 10px;
 }
 
+.text {
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 25px;
+  color: #333;
+  opacity: 0;
+  transition: opacity .1s ease-out 0.1s;
+  pointer-events: none;
+}
+
+.photo {
+  width: 300px;
+  height: 300px;
+}
+
+.clear-fix {
+  clear: both;
+}
