--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,3 @@
-<!-- navbar -->
 <nav>
   <div class="nav-wrapper teal accent-4">
     <a href="#" class="brand-logo">Charms</a>
@@ -9,32 +8,25 @@
       <li><%= link_to 'Logout', logout_path, method: :delete %></li>
     </ul>
   </div>
-</nav> <!-- end of navbar -->
+</nav>
 
-<div class="photo-banner"></div>
-
-<!-- photo feed content -->
+<!-- users index -->
 <div class="content">
-  <h4 class="feed-text center-align">Photo Gallery</h4>
   <ul id="feed-box">
-    <% @photos.each do |photo| %> 
+    <% @users.each do |user| %> 
       <li>
         <div class="photo-wrapper">
           <div class="photo">
-            <%= link_to image_tag(photo.image.url(:medium)), photo_path(photo.id), class: "photo-gallery z-depth-2" %> 
-            <h6 class="caption-photo z-depth-1"><%= photo.content %></h6> 
-          
+            <%= link_to image_tag(user.avatar.url(:medium)), user_path(user.id) %>  
           </div>
-          <div class="text bottom"><h6 class="caption-photo"></h6></div>
+          
         </div>
       </li>
     <% end %> 
   </ul>
 </div>
-<!-- end of the photo feed -->
-
-<!-- keeps the footer on the bottom -->
 <div class="clear-fix"></div>
+</body>
 
 
 <!-- footer content -->
