--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <div class="nav-wrapper blue-grey darken-3">
     <a href="#" class="brand-logo brand-name">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><%= link_to 'Home', user_path(current_user) %></li>
+      <li> </li>
       <li><a href="badges.html">Search</a></li>
       <li><a href="collapsible.html">Signout</a></li>
     </ul>
@@ -23,7 +23,7 @@
 
       <h3 class="register-text">Register</h3>
   
-        <%= form_for @user do |f| %> 
+        <%= form_for @user, :html => { :multipart => true } do |f| %> 
 
           <%= f.text_field :email, :placeholder => "email", class: "sign-input" %> 
 
@@ -32,6 +32,8 @@
           <%= f.password_field :password, :placeholder => "password", class: "sign-input" %> 
 
           <%= f.password_field :password, :placeholder => "password confirmation", class: "sign-input" %>
+
+          <%= f.file_field :avatar, class: 'avatar-input' %> 
 
           <%= f.submit "login", class: "register-button" %> 
 
