--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
 
       <h3 class="register-text">Register</h3>
   
-        <%= form_for @user, :html => { :multipart => true } do |f| %> 
+        <%= form_for @user, url: users_path, :html => { :multipart: true } do |f| %> 
 
           <%= f.text_field :email, :placeholder => "email", class: "sign-input" %> 
 
@@ -33,11 +33,13 @@
 
           <%= f.password_field :password, :placeholder => "password confirmation", class: "sign-input" %>
 
-          <%= f.file_field :avatar, class: 'avatar-input' %> 
+          <%= f.file_field :avatar %> 
+
+
 
           <%= f.submit "login", class: "register-button" %> 
-
-        <% end %> 
+ <% end %> 
+   
   
       </div>
     </div>
