--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 <div class="content-profile-page">
    <div class="profile-user-page card">
       <div class="img-user-profile">
-        <img class="profile-bgHome" src="http://37.media.tumblr.com/88cbce9265c55a70a753beb0d6ecc2cd/tumblr_n8gxzn78qH1st5lhmo1_1280.jpg" />
+        <img class="profile-bgHome" src="/images/lulu.jpg" />
         <!-- user profile photo -->
         <%= image_tag @user.avatar.url(:thumb) %> 
       </div>
