--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,7 @@
     <li class="nav-links"><%= link_to 'add photo', new_photo_path %></li> 
 
     <li class="nav-links"><%= link_to 'delete account', user_path(current_user), method: :delete, data: { confirm: 'Are you sure?'} %></li> 
+    <li class="nav-links"><%= link_to 'workout', workouts_path %></li> 
   </ul> 
 </nav><!-- end of navigation-->
 
