creating choices for user to choose which body part

--- a/app/assets/stylesheets/workouts.scss
+++ b/app/assets/stylesheets/workouts.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the workouts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.buttology { 
+  text-align: center; 
+}
+
+.anatomy {
+  width: 350px; 
+  height: 350px; 
+  padding-top: 20px; 
+}
