--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,2 +1,61 @@
-<h1>Workouts#index</h1>
-<p>Find me in app/views/workouts/index.html.erb</p>
+<!-- navbar -->
+<nav>
+  <div class="nav-wrapper blue-grey darken-2">
+    <a href="#" class="brand-logo brand-name">Booty Builder</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><%= link_to 'Home', user_path(current_user) %></li> 
+      <li><%= link_to 'Explore', photos_path %></li>
+      <li><%= link_to 'Search', users_path %></li>
+      <li><%= link_to 'Sign Out', logout_path, method: :delete %></li>
+    </ul>
+  </div>
+</nav>
+
+<div class="buttology"> 
+  <h3>Glute Anatomy</h3> 
+  <!-- imaage of glute anatomy -->
+  <img class="glute_info" src="/images/buttology.jpg"/>
+
+  <div class="row"> 
+    <h4>Choose body part</h4> 
+    <div class="col s4">
+      <h5>Gluteus Medius</h5> 
+        <img class="anatomy" src=
+      "images/lunge.jpg"/> 
+    </div> 
+
+    <div class="col s4">
+      <h5>Gluteus Maximus</h5> 
+      <img class="anatomy" src="images/squat_home.jpg"/> 
+    </div> 
+
+    <div class="col s4"> 
+      <h5>Gluteus Minimus</h5> 
+      <img class="anatomy" src=
+    "images/hip_abductor.png"/>
+    </div> 
+
+  </div> 
+
+</div> 
+<!-- footer content -->
+<footer class="page-footer black">
+  <div class="container center-align">
+    <div class="row">
+      <div class="col s12">
+        <h5 class="white-text">Booty Builder</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col s12">
+        <h5 class="white-text">Contact Us</h5>
+      
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container center-align">
+     Copyright 2015 © Booty Builder
+      <a class="grey-text text-lighten-4 right" href="#!"></a>
+    </div>
+  </div>
+</footer>
