--- a/app/assets/stylesheets/workouts.scss
+++ b/app/assets/stylesheets/workouts.scss
@@ -4,10 +4,20 @@
 
 .buttology { 
   text-align: center; 
+  background-color: #E0E0E0;
+}
+
+.glutes {
+  width: 500px; 
+  height: 500px;
 }
 
 .anatomy {
   width: 350px; 
   height: 350px; 
   padding-top: 20px; 
+}
+
+.glutes_section {
+  text-align: center;
 }
