--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <nav>
-  <div class="nav-wrapper teal accent-4">
-    <a href="#" class="brand-logo">Charms</a>
+  <div class="nav-wrapper blue-grey darken-2">
+    <a href="#" class="brand-logo">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><%= link_to 'Home', user_path(current_user) %></li>
       <li><%= link_to 'Explore', photos_path %></li>  
@@ -11,7 +11,9 @@
   </div>
 </nav> <!-- end of navbar -->
 
-<div class="photo-banner"></div>
+<div class="photo-banner">
+ <img class="photo-index" src="images/jen_glute.jpg"/>
+</div>
 
 <!-- photo feed content -->
 <div class="content">
