--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <nav>
-  <div class="nav-wrapper teal accent-4">
-    <a href="#" class="brand-logo">Charms</a>
+  <div class="nav-wrapper blue-grey darken-2">
+    <a href="#" class="brand-logo">Booty Builder</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><%= link_to 'Home', user_path(current_user) %></li>
       <li><%= link_to 'Explore', photos_path %></li>  
