--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,9 +31,8 @@
   <ul id="navTxtBottom"> 
     <li class="nav-links"><%= link_to 'edit profile', edit_user_path %></li> 
     <li class="nav-links"><%= link_to 'add photo', new_photo_path %></li> 
-
+    <li class="nav-links"><%= link_to 'create workout', workouts_path %></li> 
     <li class="nav-links"><%= link_to 'delete account', user_path(current_user), method: :delete, data: { confirm: 'Are you sure?'} %></li> 
-    <li class="nav-links"><%= link_to 'workout', workouts_path %></li> 
   </ul> 
 </nav><!-- end of navigation-->
 
