--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -11,11 +11,15 @@
   </div>
 </nav>
 
-<div class="buttology"> 
+<!-- anatomy section -->
+<section class="glutes_section">  
   <h3>Glute Anatomy</h3> 
   <!-- imaage of glute anatomy -->
-  <img src="/images/buttology.jpg"/>
+  <img class="glutes" src="/images/buttology.jpg"/>
+</section>
 
+<!-- choices of body parts -->
+<div class="buttology"> 
   <div class="row"> 
     <h4>Choose body part</h4> 
     
@@ -37,6 +41,7 @@
   </div> 
 
 </div> 
+
 <!-- footer content -->
 <footer class="page-footer black">
   <div class="container center-align">
