--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -11,8 +11,11 @@
   </div>
 </nav> <!-- end of navabar -->
 
+<section class="photo-banner"> 
+  <img class="photo-ban" src="/images/fit_banner.jpg"/>
+<h3 class='photo-title'>Add Photo</h3> 
 <div class="photo-form container center-align">
-  <h3 class='photo-title'>Add Photo</h3> 
+  
   <div class="row">
     <div class="col s6">
       <%= form_for @photo, html: { multipart: true }, class: "photo-line center-align" do |f| %> 
